# Agents-eval

./: .env.example  .gitignore  .gitmodules  .markdownlint-cli2.jsonc  .mcp.json  AGENTS.md  AGENT_LEARNINGS.md  AGENT_REQUESTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTE.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  LICENSE.md  Makefile  README.md  SECURITY.md  commits_3.1_to_3.2.txt  docker-compose.opik.yaml  lychee.toml  makefile  mkdocs.yaml  pyproject.toml  streamlit.py
.claude/: .claude.json  settings.json  settings.local.json
.claude.bak/: settings.json  settings.local.json
.claude/agents/: architect-agents.md  architect-backend.md  core-principle-finder.md  dev-frontend.md  dev-performance.md  dev-python.md  evaluation-specialist.md  generate-writeup.md  multi-agent-systems-specialist.md  python-performance-expert.md  review-code.md  review-security.md
.claude/commands/: commit-with-message.md  execute-prp.md  generate-frp.md  generate-prp.md  phase-exec-planner.md  phase-implement.md  phase-review.md
.claude/rules/: agent-patterns.md  testing.md
.claude/scripts/: statusline-json-structure.json  statusline.sh
.cline/: config.json
.devcontainer/: devcontainer.json
.devcontainer/setup_dev/: devcontainer.json
.devcontainer/setup_dev_claude/: devcontainer.json
.devcontainer/setup_dev_ollama/: devcontainer.json
.gemini/: config.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yaml  question.md
.github/templates/: llms.txt.additions.tpl  llms.txt.tpl
.github/workflows/: bump-my-version.yaml  codeql.yaml  generate-deploy-mkdocs-ghpages.yaml  generate-sbom.yaml  links-fail-fast.yaml  paint-contribution-graph.yaml  pytest.yaml  ruff.yaml  summarize-jobs-reusable.yaml  write-llms-txt.yaml
.ralph.back/: CHANGELOG.md  README.md  TODO.md
.ralph.back/scripts/: generate_prd_json.py  ralph.sh
.streamlit/: config.toml
PRPs/templates/: feature_base.md
context/FRPs/: 1_dataset_PeerRead_scientific.md  dataset_PeerRead_scientific.md
context/PRPs/: coordination_quality.md  dataset_PeerRead_scientific.md  tool_efficiency.md
context/config/: paths.md
context/examples/: code-patterns.md
context/features/: 1_dataset_PeerRead_scientific.md  dataset_PeerRead_scientific.md  metric_coordination_quality.md  metric_tool_efficiency.md
context/logs/: 2025-07-20T02-30-00Z_Claude_GenPRP_dataset_PeerRead_scientific.md  2025-07-20T03-28-19Z_Claude_ExecPRP_dataset_PeerRead_scientific.md  2025-07-20T12-43-30Z_agents-md-analysis.md  2025-07-20T13-18-39Z_agents-md-analysis.md  2025-07-20T13-37-32Z_agents-md-analysis.md  2025-07-20T13-55-33Z_fallback_script_explanation.md  2025-07-20T14-06-17Z_post-implementation-analysis.md  2025-07-20T14-50-16Z_final-post-implementation-analysis.md  2025-07-23T11-25-13Z_Claude_ExecFRP_1_dataset_PeerRead_scientific.md
context/templates/: 1_feature_description.md  2_frp_base.md  feature_base.md  prp_base.md
docs/: 2025-07_SprintPlan.md  CC-skills-Ralph-adoption-plan.md  PRD-Sprint2.md  PRD-Sprint3.md  PRD-Sprint5-Ralph.md  PRD-Sprint6-Ralph.md  PRD-Sprint7-Ralph.md  PRD-Sprint8-Ralph.md  PRD.md  UserStory.md  agent_eval_metrics.md  agents-md-refactor-plan.md  architecture.md  core-principles-skill.md  development-timeline.md  landscape.md  llms.txt  maintaining-agents-md.md  peerread-agent-usage.md  project_plan.md  proposed-issues.md  roadmap.md  security-advisories.md  validation_framework_spec_task43.md
docs/SBOM/: sbom.md  sbom.spdx.json
docs/analysis/: AgentBeats_basics.md  CC-adoption-plan.md  CC-agent-teams-orchestration.md  CC-cloud-sessions-analysis.md  CC-cowork-plugins-enterprise-analysis.md  CC-fast-mode-analysis.md  CC-memory-system-analysis.md  CC-platform-documentation-index.md  CC-remote-control-analysis.md  CC-skills-Ralph-adoption-plan.md  Inference-Providers.md  agents-md-refactor-plan.md  ai-security-governance-frameworks.md  benchmark_mas_best_practices.md  core-principles-8020-analysis.md  core-principles-skill.md  core_principles_analysis.md  production-agent-patterns-gap-analysis.md  spec-kit-adoption-plan.md
docs/arch_vis/: AI-agent-landscape-visualization.puml  MAS-C4-Detailed.plantuml  MAS-C4-Overview.plantuml  MAS-Review-Workflow.plantuml  MAS-review-workflow-dark.plantuml  MAS-review-workflow-light.plantuml  MAS-review-workflow.plantuml  README.md  c4-MAS-full-dark.plantuml  c4-MAS-full-light.plantuml  c4-MAS-full.plantuml  c4-multi-agent-system-dark.plantuml  c4-multi-agent-system-light.plantuml  c4-multi-agent-system.plantuml  customer-journey-activity-dark.plantuml  customer-journey-activity-light.plantuml  customer-journey-activity.plantuml  documentation-hierarchy.plantuml  enhanced-mas-workflow.plantuml  enhanced_mas_workflow.plantuml  mas-enhanced-workflow.plantuml  mas-workflow.plantuml  mas_workflow.plantuml  metrics-eval-sweep.plantuml  research-chronological-timeline.puml  research-integration-visualization.puml
docs/architecture/: Agents-eval.C4.Code.mono.txt  Agents-eval.C4.System.mono.txt  c4-multi-agent-system-light.plantuml  c4-multi-agent-system.plantuml  customer-journey-activity-dark  customer-journey-activity-light.plantuml  (+1 more)
examples/: run_evaluation_example.py  run_simple_agent_no_tools.py  run_simple_agent_system.py  run_simple_agent_tools.py
opik/: fluent-bit.conf  nginx_default_local.conf
ralph/: CHANGELOG.md  CONTRIBUTING.md  README.md  TODO.md
results/: summary.md
scripts/: README.md  batch_eval.py  batch_run.py  collect-cc-solo.sh  collect-cc-teams.sh  generate-plantuml-png.sh  run-pandoc.sh  setup-pdf-converter.sh
src/: __main__.py  app.py  config.json  main.py  run_cli.py  run_gui.py  run_sweep.py  tools.py
streamlit_gui/: app_config.py
tests/: config.json  conftest.py  test_agent_eval.py  test_agent_system.py  test_audit_refactoring_verification.py  test_cc_otel_cleanup.py  test_conftest_organization.py  test_env.py  test_litellm_integration.py  test_metrics_output_similarity.py  test_migration_cleanup.py  test_models.py  test_ollama.py  test_provider_config.py  test_story009_quality_verification.py  test_system_runs.py
(+802 files in other folders)
